# fast-news-reader

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: test.yml
custom_components/fast_news_reader/: __init__.py  config_flow.py  const.py  coordinator.py  image_extractor.py  manifest.json  presets.py  sensor.py  strings.json
custom_components/fast_news_reader/translations/: de.json  en.json
custom_components/fast_news_reader/www/: fast-news-reader-card.js
docs/: CHANGELOG.md  DEVELOPMENT.md  IMAGE_EXTRACTION.md  SCHEMA.md
tests/: conftest.py  test_config_flow_validate.py  test_coordinator.py  test_image_extractor.py  test_sensor.py
tests/fixtures/: README.md  bbc.xml  heise.xml  tagesschau.xml
